Inazuma-Eleven-VR-Save-Editor Update
Inazuma-Eleven-VR-Save-Editor Update v1.4.2

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:memoryEditorViews="clr-namespace:InazumaElevenVRSaveEditor.Features.MemoryEditor.Views"
         xmlns:updatesViews="clr-namespace:InazumaElevenVRSaveEditor.Features.Updates.Views"
         Title="Inazuma Eleven VR - Save Editor"
+        Icon="pack://application:,,,/icon.ico"
         Height="1000"
         Width="1450"
         WindowStartupLocation="CenterScreen"
