Inazuma-Eleven-VR-Save-Editor Update
Inazuma-Eleven-VR-Save-Editor Update v1.6.0

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -501,6 +501,11 @@
                             Visibility="{Binding MemoryEditor.SelectedTool, Converter={StaticResource EqualToVisibilityConverter}, ConverterParameter=spiritcards}"
                             DataContext="{Binding}"/>
 
+                        <!-- Player Spirits Adder View -->
+                        <memoryEditorViews:PlayerSpiritsAdderControl
+                            Visibility="{Binding MemoryEditor.SelectedTool, Converter={StaticResource EqualToVisibilityConverter}, ConverterParameter=playerspirits}"
+                            DataContext="{Binding}"/>
+
                         <!-- Beans Editor View -->
                         <memoryEditorViews:BeansEditorControl
                             Visibility="{Binding MemoryEditor.SelectedTool, Converter={StaticResource EqualToVisibilityConverter}, ConverterParameter=beans}"
